--- a/react-vite/package.json
+++ b/react-vite/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@mui/x-date-pickers": "^7.6.1",
+    "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
     "mui-image": "^1.0.7",
     "react": "^18.2.0",
